# boinc-boinc

./: 01_COMMON_CONTEXT.md  02_TASK_RUST_PARSER.md  03_TASK_ELIXIR_COORDINATOR.md  04_TASK_NIX_BUILD.md  05_TASK_NICKEL_CONFIG.md  07_TASK_PHOENIX_DASHBOARD.md  CONTRIBUTING.md  LICENSE.txt  MAINTAINERS.md  README.md  RSR_COMPLIANCE.md
.well-known/: humans.txt
elixir-coordinator/: mix.exs
elixir-coordinator/lib/coordinator/: database.ex  proof_tracker.ex  work_generator.ex
grammar/: oblibeny-semantics.md
lean-proofs/Oblibeny/: Semantics.lean
lean-proofs/Oblibeny/Properties/: PhaseSeparation.lean  ResourceBounds.lean
oblibeny-boinc/: .gitattributes  .gitlab-ci.yml  00_MASTER_ORCHESTRATION.md  06_TASK_LEAN_PROOFS.md  CLAUDE.md  CODE_OF_CONDUCT.md  FUNDING.yml  GOVERNANCE.adoc  HANDOVER_TO_NEW_CLAUDE.md  README.md  REVERSIBILITY.md  SECURITY.md  flake.nix  justfile
oblibeny-boinc/.well-known/: ai.txt  consent-required.txt  humans.txt  provenance.json  security.txt
oblibeny-boinc/deployment/arangodb/: init-db.js
oblibeny-boinc/deployment/podman/: Dockerfile.elixir  docker-compose.yml
oblibeny-boinc/examples/: led-blinker.obl
oblibeny-boinc/grammar/: oblibeny-grammar.ebnf
oblibeny-boinc/lean-proofs/: Main.lean  lakefile.lean
rust-parser/: Cargo.toml
rust-parser/src/analyzer/: resources.rs  termination.rs
rust-parser/src/ast/: expr.rs  mod.rs  visitor.rs
rust-parser/src/parser/: grammar.pest  parser.rs
rust-parser/src/phases/: mod.rs  separator.rs
scripts/deploy/: production.sh
scripts/setup/: dev-setup.sh
(+15 files in other folders)
