[package]
name = "oblibeny-parser"
version = "0.6.0"
edition = "2021"
authors = ["Oblibeny BOINC Project"]
description = "Parser and analyzer for the Oblibeny programming language"
license = "GPL-3.0-or-later"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
petgraph = "0.6"  # For call graph analysis

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"

[[bin]]
name = "oblibeny"
path = "src/bin/oblibeny-cli.rs"

[[bench]]
name = "parser_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
